# inc_someip_gateway

./: .bazelrc  .pre-commit-config.yaml  AGENTS.md  BUILD  MODULE.bazel  README.md  REUSE.toml  nightly.yml  python_requirements_lock.txt  versions.json
.devcontainer/: Dockerfile
.github/actions/repository-cache-check/: action.yml
.github/actions/repository-cache-maintenance/: action.yml
.github/actions/repository-cache-refresh/: action.yml
.github/instructions/: architecture.md  build-and-test.md  project-structure.md
.github/skills/fix-failing-test/: SKILL.md
.github/skills/memory-profiling/: SKILL.md
.github/workflows/: build_and_test_cross_compilation.yml  build_and_test_host.yml  build_and_test_qnx.yml  cache_maintenance.yml  ci.yml  ci_pull_request_target.yml  copilot-setup-steps.yml  copyright.yml  docs-cleanup.yml  docs-publish.yml  docs.yml  format.yml  license_check.yml  nightly.yml  pre-commit.yml  repository_cache_maintenance.yml  warm_main_branch_cache.yml
bazel/toolchains/: BUILD.bazel
bazel/tools/: BUILD.bazel  someip_config.bzl
deployment/: BUILD.bazel
docs/: gateway_ipc_binding  index.rst  socom
docs/architecture/: components.rst
main/: genindex.html  index.html  objects.inv  schema_violations.json  search.html  searchindex.js
main/architecture/: components.html  dec_someipgw_registration.html  features.html  index.html
main/gateway_ipc_binding/: index.html  ipc_protocol.html  shared_memory.html
main/requirements/: index.html  stakeholder.html
main/requirements/component/: index.html
main/requirements/feature/: index.html
main/socom/design/: 30_structural_view.html  40_behavioral_view.html  50_state_dynamics_view.html  index.html
main/tc8_conformance/: index.html  requirements.html
pr-1/: genindex.html  needs.json  schema_violations.json  search.html
pr-1/architecture/: components.html  dec_someipgw_registration.html  index.html
pr-1/requirements/: stakeholder.html
pr-1/requirements/component/: index.html
pr-1/requirements/feature/: index.html
pr-1/socom/design/: 30_structural_view.html  40_behavioral_view.html  index.html
pr-1/tc8_conformance/: index.html  requirements.html
pr-10/: schema_violations.json
pr-10/architecture/: components.html  dec_someipgw_registration.html  features.html
pr-10/requirements/: stakeholder.html
pr-10/socom/design/: 30_structural_view.html  40_behavioral_view.html
pr-10/tc8_conformance/: requirements.html
pr-11/: genindex.html  objects.inv  schema_violations.json
pr-11/architecture/: components.html  dec_someipgw_registration.html  features.html
pr-11/requirements/: stakeholder.html
pr-11/requirements/feature/: index.html
pr-11/tc8_conformance/: requirements.html
pr-12/: schema_violations.json
pr-12/architecture/: components.html  dec_someipgw_registration.html  features.html
pr-12/requirements/: stakeholder.html
pr-12/socom/design/: 30_structural_view.html  50_state_dynamics_view.html
pr-12/tc8_conformance/: requirements.html
pr-13/: schema_violations.json
pr-13/architecture/: components.html  dec_someipgw_registration.html  features.html
pr-13/requirements/: stakeholder.html
pr-13/socom/design/: index.html
pr-13/tc8_conformance/: requirements.html
pr-14/: metrics.json  schema_violations.json
pr-14/architecture/: components.html  dec_someipgw_registration.html  features.html
pr-14/gateway_ipc_binding/: shared_memory.html
pr-14/requirements/: stakeholder.html
pr-14/requirements/component/: index.html
pr-14/socom/design/: index.html
pr-14/tc8_conformance/: index.html  requirements.html
pr-16/: index.html  schema_violations.json
pr-16/architecture/: components.html  dec_someipgw_registration.html  features.html
pr-16/gateway_ipc_binding/: index.html
pr-16/requirements/: stakeholder.html
pr-16/tc8_conformance/: requirements.html
pr-18/: schema_violations.json  search.html  searchindex.js
pr-18/architecture/: components.html  dec_someipgw_registration.html  features.html
pr-18/requirements/: index.html  stakeholder.html
pr-18/tc8_conformance/: requirements.html
pr-8/: index.html  needs.json  schema_violations.json
pr-8/architecture/: components.html  dec_someipgw_registration.html  features.html
pr-8/requirements/: stakeholder.html
pr-8/tc8_conformance/: requirements.html
pr-9/: schema_violations.json
pr-9/architecture/: components.html  dec_someipgw_registration.html  features.html
pr-9/gateway_ipc_binding/: ipc_protocol.html  shared_memory.html
pr-9/requirements/: stakeholder.html
pr-9/tc8_conformance/: requirements.html
quality/integration_testing/: integration_testing.bzl
score/config/: mw_someip_config.fbs
score/gateway_ipc_binding/: BUILD  README.md
score/gatewayd/: BUILD.bazel  local_service_instance.cpp  local_service_instance.h  main.cpp  remote_service_instance.cpp  remote_service_instance.h
score/serializer/: BUILD.bazel  null_serializer.cpp  null_serializer_test.cpp  pre_serialized_data.h  serializer.h
score/socom/: BUILD  README.adoc
score/someipd/: BUILD.bazel  local_network_service.cpp  local_network_service.h  main.cpp  remote_network_service.cpp  remote_network_service.h  routing.cpp  routing.h
src/common/: BUILD.bazel
src/common/include/score/someip/: someip_error.h  types.h
src/common/src/: someip_error.cpp
src/config/: BUILD.bazel  mw_someip_config.json  mw_someip_config.schema.json
src/config/dev/: BUILD.bazel
src/gateway_ipc_binding/: BUILD
src/gatewayd/: BUILD.bazel  local_service_instance.cpp  local_service_instance.h  main.cpp  remote_service_instance.cpp  remote_service_instance.h
src/serializer/: BUILD.bazel  exported_symbols.lds  null_serializer.cpp  null_serializer_test.cpp
src/socom/: BUILD
src/someipd/: BUILD.bazel  local_network_service.h  main.cpp  remote_network_service.h  routing.cpp  routing.h
tests/benchmarks/: BUILD.bazel  echo_server.cpp  echo_service.h  ipc_benchmarks.cpp
tests/integration/: BUILD.bazel  conftest.py
tests/integration/docker_setup/: docker-compose.yaml  entrypoint-master
tests/integration_test/: BUILD
(+180 files in other folders)
