# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "score_someip_gateway",
    version = "0.0.1",
)

# ============================================================================
# Python Configuration
# ============================================================================
bazel_dep(name = "rules_python", version = "1.9.0", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)

# Required because python 3.8 support was dropped in rules_python 1.8.0, but is
# still needed for score_bazel_tools_python 0.1.3 (latest).
python.single_version_override(
    python_version = "3.8.20",
    sha256 = {
        "aarch64-unknown-linux-gnu": "9d8798f9e79e0fc0f36fcb95bfa28a1023407d51a8ea5944b4da711f1f75f1ed",
        "x86_64-unknown-linux-gnu": "285e141c36f88b2e9357654c5f77d1f8fb29cc25132698fe35bb30d787f38e87",
    },
    urls = ["https://github.com/astral-sh/python-build-standalone/releases/download/20241002/cpython-{python_version}+20241002-{platform}-{build}.tar.gz"],
)
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

bazel_dep(
    name = "score_bazel_tools_python",
    version = "0.1.3",
    dev_dependency = True,
    repo_name = "bazel_tools_python",
)

# Python pip dependencies
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = True)
pip.parse(
    hub_name = "score_someip_gateway_pip",
    python_version = "3.12",
    requirements_lock = "//:python_requirements_lock.txt",
)
use_repo(pip, "score_someip_gateway_pip")

# ============================================================================
# Testing & Performance Measurement
# ============================================================================
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)

# ============================================================================
# Build System Rules & Utilities
# ============================================================================
bazel_dep(name = "bazel_lib", version = "3.3.1", dev_dependency = True)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_rust", version = "0.68.1-score")

# ============================================================================
# Toolchains & Platform Configuration
# ============================================================================
# S-CORE Platform Definitions: Provides constraint values and platform definitions
bazel_dep(name = "score_bazel_platforms", version = "0.1.2")

bazel_dep(name = "score_toolchains_rust", version = "0.9.1", dev_dependency = True)

# ============================================================================
# QNX8 Toolchain Configuration
# ============================================================================
bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.4", dev_dependency = True)

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_gcc_aarch64_toolchain",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_x86_64_toolchain",
    sdp_version = "8.0.4",
    target_cpu = "x86_64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_aarch64_toolchain",
    sdp_version = "8.0.4",
    target_cpu = "aarch64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    gcc,
    "score_gcc_aarch64_toolchain",
    "score_gcc_x86_64_toolchain",
    "score_qcc_aarch64_toolchain",
    "score_qcc_x86_64_toolchain",
)

# ============================================================================
# LLVM C/C++ Toolchain Configuration
# ============================================================================

# LLVM Toolchain: C/C++ cross-compilation support for x86_64 and aarch64
# Integrates with LLVM 19.1.7 and Debian Bullseye sysroots
bazel_dep(name = "toolchains_llvm", version = "1.7.0", dev_dependency = True)

# Configures LLVM 19.1.7 for C/C++ compilation with cross-architecture support.
llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)
llvm.toolchain(
    name = "llvm_toolchain",
    cxx_standard = {"": "c++17"},
    llvm_version = "19.1.7",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

# ============================================================================
# Tooling & Development
# ============================================================================
bazel_dep(name = "score_tooling", version = "1.2.0", dev_dependency = True)
bazel_dep(name = "aspect_rules_lint", version = "2.6.0", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2", dev_dependency = True)

# ============================================================================
# JSON Schema Validation
# ============================================================================
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "download_utils", version = "1.2.3")

download_archive = use_repo_rule("@download_utils//download/archive:defs.bzl", "download_archive")

download_archive(
    name = "json_schema_validator",
    build = "//third_party/json_schema_validator:json_schema_validator.BUILD",
    integrity = "sha256-g/YdgRL0heDT8ectUWELo5JLF5kmqDdq7zwDh3D68gI=",
    strip_prefix = "json-schema-validator-2.1.0",
    urls = ["https://github.com/pboettch/json-schema-validator/archive/refs/tags/2.1.0.tar.gz"],
)

download_archive(
    name = "jsonschema",
    build = "//third_party/jsonschema:jsonschema.BUILD",
    integrity = "sha256-rugv6PaV/h4ielG3dMOujCuyVpUGUampKGbFI7FQQs4=",
    strip_prefix = "jsonschema-4.23.0",
    urls = ["https://github.com/python-jsonschema/jsonschema/archive/refs/tags/v4.23.0.tar.gz"],
)

# ============================================================================
# Documentation
# ============================================================================
bazel_dep(name = "score_docs_as_code", version = "3.0.0", dev_dependency = True)

# ============================================================================
# Communication Framework
# ============================================================================
bazel_dep(name = "score_communication", version = "0.2.1")

# ============================================================================
# Base Libraries
# ============================================================================
bazel_dep(name = "score_baselibs", version = "0.2.8")

# Upgrade grpc-java to 1.70.0 for compatibility with newer grpc (1.70.1).
# The transitive grpc dependency (via flatbuffers) resolves to grpc 1.70.1, which removed
# the com_envoyproxy_protoc_gen_validate repo that grpc-java@1.66.0 requires.
single_version_override(
    module_name = "grpc-java",
    version = "1.70.0",
)

# ============================================================================
# Code Generation
# ============================================================================
bazel_dep(name = "flatbuffers", version = "25.12.19")

# ============================================================================
# Examples: Car Window Simulator
# ============================================================================
car_window_sim_crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate", dev_dependency = True)
car_window_sim_crate.spec(
    package = "anyhow",
    version = "1",
)
car_window_sim_crate.spec(
    package = "async-trait",
    version = "0.1",
)
car_window_sim_crate.from_specs(name = "car_window_sim_crate")
use_repo(car_window_sim_crate, "car_window_sim_crate")

# ============================================================================
# SOME/IP Stack Integration
# ============================================================================
# Rules for Foreign/C/C++/CMake integration
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
single_version_override(
    module_name = "rules_foreign_cc",
    patch_strip = 1,
    patches = [
        "//:third_party/rules_foreign_cc-dont_block_network.patch",
        "//:third_party/rules_foreign_cc-fix_proc_self_cwd.patch",
    ],
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "boost",
    build_file_content = """
filegroup(
    name = "all_srcs",
    srcs = glob(["**"], exclude = ["libs/**/test/**"]),
    visibility = ["//visibility:public"],
)
""",
    patch_strip = 1,
    patches = ["//:third_party/boost-asio_qnx.patch"],
    sha256 = "7da75f171837577a52bbf217e17f8ea576c7c246e4594d617bfde7fafd408be5",
    strip_prefix = "boost-1.87.0",
    urls = ["https://github.com/boostorg/boost/releases/download/boost-1.87.0/boost-1.87.0-cmake.tar.xz"],
)

http_archive(
    name = "vsomeip",
    build_file = "//:third_party/vsomeip.BUILD.bazel",
    integrity = "sha256-hMjkJs3fQ14MVtpwupfno/UbK+rxV+1zih9632bO5Sk=",
    patch_strip = 1,
    patches = ["//:third_party/vsomeip-qnx8.patch"],
    strip_prefix = "vsomeip-3.6.1",
    urls = [
        "https://github.com/COVESA/vsomeip/archive/refs/tags/3.6.1.tar.gz",
    ],
)
