# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_python//python:defs.bzl", "py_runtime")
load("@rules_python//python:py_runtime_pair.bzl", "py_runtime_pair")

package(default_visibility = ["//visibility:public"])

# Fallback runtime used for analysis/execution of Python-based test wrappers in
# QNX target configurations.
py_runtime(
    name = "host_py3_runtime",
    interpreter_path = "/usr/bin/python3",
    python_version = "PY3",
)

py_runtime_pair(
    name = "qnx_python_runtime_pair",
    py3_runtime = ":host_py3_runtime",
)

toolchain(
    name = "qnx_python_toolchain",
    target_compatible_with = [
        "@platforms//os:qnx",
    ],
    toolchain = ":qnx_python_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)
